[resume] Use CSS to enable correct page breaks in PDF

--- a/source/resume/style.css
+++ b/source/resume/style.css
@@ -11,7 +11,6 @@ body {
 h1.pagetitle {
 	float: left;
 	font-size: 3.6em;
-	letter-spacing: .2em;
 	margin-top: 0;
 	margin-bottom: 0.15em;
 }
@@ -36,6 +35,7 @@ h2 {
 
 .job {
 	clear:both;
+	page-break-inside: avoid;
 }
 
 .job .row1 {
